--- a/styles/samplertrp.css
+++ b/styles/samplertrp.css
@@ -753,3 +753,23 @@ body {
         font-size: 16px;
     }
 }
+.header-icons button i {
+    color: red; 
+    font-size: 18px; 
+    transition: color 0.3s ease; 
+}
+
+
+.header-icons button:hover i {
+    color: white; 
+}
+
+.footer-socials a i {
+    color: red;
+    transition: color 0.3s ease; 
+}
+
+
+.footer-socials a:hover i {
+    color: white;
+}
