--- a/styles/register.css
+++ b/styles/register.css
@@ -10,7 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: #121212;
+    background-color: white;
     font-family: Arial, sans-serif;
 }
 
@@ -46,7 +46,7 @@ body {
     display: flex;
     align-items: center;
     padding-left: 30px;
-    color: #00bfff;
+    color: #ff6b6b;
 }
 
 .title::before,
@@ -57,7 +57,7 @@ body {
     width: 16px;
     border-radius: 50%;
     left: 0px;
-    background-color: #00bfff;
+    background-color: #ff6b6b;
 }
 
 .title::after {
@@ -73,11 +73,11 @@ body {
 }
 
 .signin a {
-    color: #00bfff;
+    color: #ff6b6b;
 }
 
 .signin a:hover {
-    text-decoration: underline royalblue;
+    text-decoration: underline rgb(185, 51, 36);
 }
 
 /* Flex for name inputs */
@@ -122,7 +122,7 @@ body {
 
 .form label .input:focus + span,
 .form label .input:valid + span {
-    color: #00bfff;
+    color: #ff6b6b;
     top: 0px;
     font-size: 0.7em;
     font-weight: 600;
@@ -136,13 +136,13 @@ body {
     border-radius: 10px;
     color: #fff;
     font-size: 16px;
-    background-color: #00bfff;
+    background-color: #ff6b6b;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .submit:hover {
-    background-color: #00bfff96;
+    background-color: rgb(185, 51, 36);
 }
 
 /* Pulse animation */
